Fix footer to not stretch on larger screens and to show incremented scores in center of footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,17 +211,18 @@ h1 {
 footer {
     background-color: rgba(12, 12, 20, 0.8);
     color: var(--highlight);
-    position: relative;
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .score-and-attempts-area {
+    max-width: 1399px;
+    width: 100%;
     display: flex;
-    flex-direction: row;
-    max-width: 1300px;
-    align-items: center;
-    justify-content: center;
 }
 
 .matched-area,
@@ -229,6 +230,7 @@ footer {
     width: 50%;
     display: flex;
     font-size: xx-large;
+    align-items: center;
 }
 
 .matched-cards,
@@ -236,7 +238,7 @@ footer {
     width: 100%;
     display: flex;
     justify-content: center;
-    font-size: xx-large
+    font-size: xx-large;
 }
 
 .github {
@@ -288,8 +290,8 @@ footer {
 /* Media query: medium devices (768px and up) */
 @media screen and (min-width: 768px) {
     .cards-area {
-        grid-template-columns: repeat(4, 100px);
-        grid-template-rows: repeat(4, 100px);
+        grid-template-columns: repeat(4, 120px);
+        grid-template-rows: repeat(4, 120px);
     }
 
     .matched-area,
